test/should_pass/basic_002.grg
actions basic_002;

rule r {
	pattern {
	}
	modify {
	}
}

