test/should_fail/enum_015.grg
using enum_model_008;

rule r {
	pattern {}
	modify {}
}
